public enum TipoDeVehiculoParticular {
  AUTOMOVIL, CAMIONETA, MOTOCICLETA
}
