@startuml

abstract class Tramo {
    {abstract} getUbicacionInicial()
    {abstract} getUbicacionFinal()
}

Tramo .right.> "2" Ubicacion

Tramo <|-left- ViajeEnVehiculoParticular
Tramo <|-- ViajeEnTransportePublico
Tramo <|-- ViajeEnServicioContratado
Tramo <|-- ViajeEnBicicletaOAPie

ViajeEnTransportePublico --> TransportePublico
ViajeEnServicioContratado --> ServicioContratado
ViajeEnVehiculoParticular --> "1" TipoDeVehiculoParticular
ViajeEnVehiculoParticular --> "1" TipoDeCombustible

enum TipoDeVehiculoParticular {
    AUTOMOVIL
    CAMIONETA
    MOTOCICLETA
}

enum TipoDeCombustible {
    GNC
    NAFTA
    ELECTRICO
    GASOIL
}

class ServicioContratado {
    nombre
}

class TransportePublico {
    darDeAltaParada(tramo)
    tramosEntre(tramoInicial, tramoFinal)
}


enum TipoDeTransportePublico {
    TREN
    SUBTE
    COLECTIVO
}

TransportePublico --> "1" TipoDeTransportePublico
TransportePublico -up-> "1..*" Ubicacion

@enduml